--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,50 @@
 {
-  "manifest_version": 3,
-  "name": "Instagram Unfollowers",
-  "version": "1.0.0",
-  "description": "Track Instagram unfollowers safely and locally.",
-  "permissions": [
-    "cookies",
-    "storage",
-    "activeTab",
-    "scripting" 
-  ],
-  "host_permissions": [
-    "https://www.instagram.com/*"
-  ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+    "manifest_version": 3,
+    "name": "See Who Unfollowed You",
+    "version": "1.1.0",
+    "description": "Track Instagram unfollowers safely and locally. Background scanning included.",
+    "permissions": [
+        "cookies",
+        "storage",
+        "activeTab",
+        "scripting",
+        "tabs"
+    ],
+    "host_permissions": [
+        "https://www.instagram.com/*"
+    ],
+    "background": {
+        "service_worker": "background.js",
+        "type": "module"
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "https://www.instagram.com/*"
+            ],
+            "css": [
+                "content.css"
+            ],
+            "js": [
+                "content.js"
+            ],
+            "run_at": "document_end"
+        }
+    ],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: https:;"
+    },
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        }
+    },
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     }
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
 }
